changes to make local fit better when uploaded to AMLR website, style tweaks, inline JSON data

--- a/gulpfile.js/config.json
+++ b/gulpfile.js/config.json
@@ -40,7 +40,7 @@
 
         "icons": {
             "src": "icons",
-            "dest": "icons",
+            "dest": "css",
             "extensions": ["svg", "gif", "png"]
         },
 
