some IDE settings and temp files - not required

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -76,8 +76,8 @@ linters:
   Indentation:
     enabled: true
     allow_non_nested_indentation: true
-    character: space # or 'tab'
-    width: 4
+    character: tab # or 'space'
+    width: 2
 
   LeadingZero:
     enabled: true
